--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -86,7 +86,7 @@ N       L         Param1     Param2   Param3
 == RUNNING ==
 Typically, you would start JPrIME-GSRf by running e.g.:
 {{{
-java -cp mypath/jprime-0.0.0.jar se.cbb.jprime.apps.gsrf
+java -cp mypath/jprime-0.0.0.jar se/cbb/jprime/apps/gsrf/GSRf
 }}}
 where the path and version of course refer to your current setup. You may want to tune the Java VM to your specific needs (heap size, performance tuning options, etc.). This is a non-trivial area however. If you are using an Oracle Java HotSpot VM, these documents may be of assistance: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
