--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -15,10 +15,8 @@
 
 DLRS (previously known as GSR and GSRf) is a phylogenetic model for the evolution of a _gene family_ inside a _species tree_. The evolution of a gene family can be envisioned as occurring in separate phases:
   # The gene tree topology is created by evolving down the species tree by means of duplications and loss events according to a birth-death process. Lineages branch deterministically at speciations.
-  # Using the ultrametric times of the gene tree, relaxed branch lengths are obtained by multiplying each
-branch time with an iid substitution rate according to some distribution.
-  # Using the gene tree topology and branch lengths, sequence evolution occurs over the tree to produce
-gene family sequences at the leaves. Possibly, site rate variation occurs according to a gamma distribution.
+  # Using the ultrametric times of the gene tree, relaxed branch lengths are obtained by multiplying each branch time with an iid substitution rate according to some distribution.
+  # Using the gene tree topology and branch lengths, sequence evolution occurs over the tree to produce gene family sequences at the leaves. Possibly, site rate variation occurs according to a gamma distribution.
 
 Hence the name DLRS = duplications, losses, rates & sequence evolution.
 
