--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -104,6 +104,6 @@ For your final runs, the number of iterations required and a suitable thinning f
 ----
 
 == ANALYSIS ==
-To be announced. However, consider using [http://cran.r-project.org CRAN R] in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA] package. As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), and sample autocorrelation, and manual inspection of log-likelihoods and parameters for parallel chains.
+To be announced. However, consider using [http://cran.r-project.org CRAN R] in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA] package. As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods and parameters for parallel chains.
 
 ----
