--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -29,6 +29,7 @@ The application JPrIME-DLRS corresponding to the model is used for obtaining the
 
 *Output:*
   * a file with samples drawn from the posterior distribution.
+  * a supplementary info file with settings, proposal acceptance ratios, etc.
 
 ----
 
@@ -43,7 +44,7 @@ Alternatively, one can specify absolute times using special formatting:
 {{{
 ((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];
 }}}
-The host tree must be ultrametric, with time 0 at the leaves and time >0 at the root, and a "stem" with timespan >0 (in the above example this was set to 0.5). The scale of the dates can be any unit: *they will be rescaled internally prior to running so that the root time is 1.0, and the output will refer to this scaling*, and not the original values.
+The host tree must be ultrametric, with time 0 at the leaves and time >0 at the root, and a "stem" with timespan >0 (in the above example this was set to 0.5). The scale of the dates can be any unit: *they will be rescaled internally prior to running so that the root time is 1.0, and the output will refer to this scaling*, and not the original values. The scale factor is included in the info output file.
 
 A good resource for divergence times is [http://www.timetree.org]. If you cannot find references to reliable divergence times, you will need to date the tree yourself. Typically, this is achieved by obtaining a set of "core" gene families (e.g. monocopy putative orthologs, housekeeping genes, etc.), aligning these, then feeding the concatenated multiple locus sequence alignment (MLSA) into a program which estimates divergence times. For acquiring core genes for microbial datasets [http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0024704 this article] may be of help. For dating, consider e.g. [http://beast.bio.ed.ac.uk BEAST], [http://www.biomedcentral.com/1471-2148/8/77 MAP-DP], [http://www.phylobayes.org PhyloBayes] or [http://loco.biosci.arizona.edu/r8s r8s].
 
@@ -77,9 +78,9 @@ c2   C
 
 == OUTPUT ==
 Output normally consists of two files, e.g.:
-  * {{{myoutput.info}}}, containing general pre- and post-run information.
   * {{{myoutput.mcmc}}}, containing tab-delimited samples drawn from the posterior distribution.
-The latter will look something like:
+  * {{{myoutput.info}}}, containing general pre- and post-run information.
+The former will look something like:
 {{{
 N       L         Param1     Param2   Param3
 0       1.5e-64   1.0        0.1      0.1
@@ -102,13 +103,13 @@ java -cp mypath/jprime-0.0.0.jar -Xms128m -Xmx1024m se/cbb/jprime/apps/dlrs/DLRS
 }}}
 You may want to tune the Java VM to your specific needs (heap size, performance tuning options, etc.). This is a non-trivial area however. If you are using an Oracle Java HotSpot VM, these documents may be of assistance: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
-Before performing your final runs, you should make pilot runs to assess the mixing, and change tuning parameters accordingly. Try striving for model parameter acceptance ratios of 0.2 - 0.5 (preferrably in the lower region). Even so, 0.1 - 0.7 might do the trick. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned.
+Before performing your real run, you should make a pilot run to assess the MCMC mixing and change tuning parameters accordingly. The length of a pilot run needs typically not be as long as the final run. Try striving for parameter acceptance ratios of 0.2 - 0.5 (preferably in the lower region). Even so, around 0.1 - 0.7 might do the trick. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned. The acceptance ratios can be inspected in the info file.
 
 For your final runs, the number of iterations required and a suitable thinning factor will depend on the size of your input. No exact numbers can be provided; you will have to rely on "common sense", and analyses ;-)  You probably want to perform 2 --4 independent "parallel" MCMC chains to be able to conduct proper analysis.
 
 ----
 
 == ANALYSIS ==
-To be announced. However, consider using [http://cran.r-project.org CRAN R] in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA] package. As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods and parameters for parallel chains.
+To be announced. However, consider using [http://cran.r-project.org CRAN R] in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA] package. As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods and parameter estimates for parallel chains.
 
 ----
