--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -64,7 +64,7 @@ MNKKELIKSIAEVNKTSITQTEEFYNSFENALIKAI
 }}}
 Please consider clearing ambiguous positions from the alignment before feeding it into JPrIME-GSRf. There are many such applications, e.g., [http://trimal.cgenomics.org trimAl], [http://sourceforge.net/projects/probmask/ ZORRO], [http://molevol.cmima.csic.es/castresana/Gblocks.html Gblocks], [http://guidance.tau.ac.il GUIDANCE] and [http://zfmk.de/web/Forschung/Tagungen/2012/201202_GfBS/Workshops/ALISCORE/index.de.html  ALISCORE].
 
-JPrIME-DLRS does not infer substitution model parameters during a run. You may choose from some common built-in models (JTT, JC, etc.), or you may provide your own time-reversible model through a program option. There are programs that help you determining a suitable model, e.g., [http://darwin.uvigo.es/software/prottest.html ProtTest].
+JPrIME-DLRS does not infer substitution model parameters during a run. You may choose from some common built-in models (JTT, JC, etc.), or you may provide your own time-reversible model through a program option. There are programs that help you determining a suitable model, e.g., [http://darwin.uvigo.es/software/prottest.html PROTTEST] and [http://darwin.uvigo.es/software/jmodeltest.html jMODELTEST].
 
 === Mapping ===
 The guest-to-host leaf map is a straightforward tab-delimited file, e.g., for the example above:
