--- a/wiki/VMCMC.wiki
+++ b/wiki/VMCMC.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-VMCMC is an application for analysing output of MCMC chains. It deals with both various metrics for assessing MCMC convergence, as well as summary statistics of inferred real-valued parameters, tree topologies, etc.
+VMCMC is an application for analysing output of MCMC chains. It deals with various metrics for assessing MCMC convergence, as well as summary statistics of inferred real-valued parameters, tree topologies, etc. VMCMC can be used with output from PrIME, and general tab-delimited files such as those produced by JPrIME-DLRS.
 
 
 = Details =
