--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -112,6 +112,10 @@ For your final runs, the number of iterations required and a suitable thinning f
 ----
 
 == ANALYSIS ==
-To be announced. However, consider using [http://cran.r-project.org CRAN R] in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA] package. As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods and parameter estimates for parallel chains.
+Consider using [http://cran.r-project.org CRAN R] in general. Several MCMC-tailored analysis softwares exist, among them:
+  * [VMCMC JPrIME-VMCMC].
+  * The CRAN R package [http://cran.r-project.org/web/packages/coda/index.html CODA].
+  * [http://tree.bio.ed.ac.uk/software/tracer/ Tracer].
+As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), potential scale reduction factor (PSRF), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods and parameter estimates for parallel chains.
 
 ----
