--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -102,7 +102,7 @@ N       L         Param1     Param2   Param3
 === Starting the application===
 Typically, you would start JPrIME-DLRS by running e.g.:
 {{{
-java -cp mypath/jprime-0.0.0.jar -Xms128m -Xmx1024m se/cbb/jprime/apps/dlrs/DLRS [options] <host tree> <msa> <guest-to-host map>
+java -cp mypath/jprime-0.0.0.jar -Xms128m -Xmx1024m se/cbb/jprime/apps/dlrs/DLRS [options] <host tree> <msa> <leaf map>
 }}}
 where the path and version of course refer to your current setup.
 Alternatively, you may specify all input in a file thus:
