--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -40,11 +40,11 @@ The application JPrIME-DLRS corresponding to the model is used for obtaining the
 === Host tree ===
 Obtain a dated species tree in Newick format. The divergence times may be specified as branch lengths, e.g.:
 {{{
-((A:0.4,B:0.4):0.6,C:1.0):0.5;
+(((Oryctolagus_cuniculus:89.9,(	Cavia_porcellus:78.3,Mus_musculus:78.3):11.6):11.8,(Equus_caballus:80.8,(Felis_catus:55.7,Canis_lupus_familiaris:55.7):25.1):20.9):62.2,Monodelphis_domestica:163.9):41.0;
 }}}
 Alternatively, one can specify absolute times using special formatting:
 {{{
-((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];
+(((Oryctolagus_cuniculus[&&PRIME NT=0],(Cavia_porcellus[&&PRIME NT=0],Mus_musculus[&&PRIME NT=0])[&&PRIME NT=78.3])[&&PRIME NT=89.9],(Equus_caballus[&&PRIME NT=0],(Felis_catus[&&PRIME NT=0],Canis_lupus_familiaris[&&PRIME NT=0])[&&PRIME NT=55.7])[&&PRIME NT=80.8])[&&PRIME NT=101.7],Monodelphis_domestica[&&PRIME NT=0])[&&PRIME NT=163.9][&&PRIME TT=41.0 NAME=Mammalia];
 }}}
 The host tree must be ultrametric, with time 0 at the leaves and time >0 at the root, and a "stem" with timespan >0 (in the above example this was set to 0.5). The scale of the dates can be any unit: *they will be rescaled internally prior to running so that the root time is 1.0, and the output will refer to this scaling*, and not the original values. The scale factor is included in the info output file.
 
