--- a/wiki/CreatingReleases.wiki
+++ b/wiki/CreatingReleases.wiki
@@ -2,10 +2,12 @@
 
 = How to create releases of JPrIME =
 
-Naturally, we use Maven for building and packaging. The pom.xml has been set to JAR packaging, and also to use the Maven Shade plugin. This means that on packaging, two kinds of output should be generated in the target directory:
+Naturally, we use Maven for building and packaging. The pom.xml has been set to JAR packaging, and also to use the Maven Shade plugin. This means that when packaging, two kinds of output should be generated in the target directory:
   # An original (small) JPrIME JAR file.
-  # An "über" (or "shaded", if you wish) JPrIME JAR file, which contains the small JPrIME JAR file bundled with all dependencies.
+  # A "shaded" (or "über", if you wish) JPrIME JAR file, which contains the small JPrIME JAR file bundled with all dependencies.
 
-In Eclipse, packaging JPrIME should be as easy as to right-click the project root folder and selecting first "Run as -> Maven clean", and then "Run as -> Maven package". Alternatively, from the command prompt, one could instead do {{{mvn clean}}} and then {{{mvn package}}}. This will generate a snapshot build, although manually renaming JAR files and keeping track of version numbers should be sufficient for our needs.
+  # Create JAR package. E.g, in Eclipse: right-click the project root folder and select "Run as -> Maven clean", then "Run as -> Maven package". Alternatively, from the command prompt: {{{mvn clean}}} then {{{mvn package}}}.
+  # Rename the shaded snapshot JAR file to jprime-x.y.z.jar with a suitable x.y.z.
+  # Add it to Downloads on Google Code along with the current SVN revision. This can be seen e.g. from the SVN repository view in Eclipse.
 
 On a side note: a tool for listing all (non-transitive) depencies from the root pom.xml can be found in {{{jprime/src/main/python/getmavendependencies/GetMavenDependencies.py}}}
