--- a/wiki/CreatingReleases.wiki
+++ b/wiki/CreatingReleases.wiki
@@ -7,7 +7,7 @@ Naturally, we use Maven for building and packaging. The pom.xml has been set to 
   * A "shaded" (or "über", if you wish) JPrIME JAR file, which contains the small JPrIME JAR file bundled with all dependencies.
 
 == Steps ==
-  # Create the shaded JAR package. E.g., in Eclipse: right-click the project root folder and select "Run as -> Maven clean", then "Run as -> Maven package". Alternatively, from the command prompt: {{{mvn clean}}} then {{{mvn package}}}.
+  # Create the shaded JAR package. E.g., in Eclipse: right-click the project root folder and select "Run as -> Maven clean", then "Run as -> Maven package" or possibly "Run as -> Maven install". Alternatively, from the command prompt: {{{mvn clean}}} then {{{mvn package}}}.
   # Rename the shaded snapshot JAR file to jprime-x.y.z.jar with a suitable x.y.z.
   # Add it to Downloads on Google Code along with the current SVN revision. This can be seen e.g. from the SVN repository view in Eclipse.
 
